tests/baselines/reference/contextuallyTypeLogicalAnd03.errors.txt
contextuallyTypeLogicalAnd03.ts(4,5): error TS2872: This kind of expression is always truthy.
contextuallyTypeLogicalAnd03.ts(4,6): error TS7006: Parameter 'a' implicitly has an 'any' type.


==== contextuallyTypeLogicalAnd03.ts (2 errors) ====
    let x: (a: string) => string;
    let y = true;
    
    x = (a => a) && (b => b);
        ~~~~~~~~
!!! error TS2872: This kind of expression is always truthy.
         ~
!!! error TS7006: Parameter 'a' implicitly has an 'any' type.